--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pricing",
   "version": "0.1.0",
+  "proxy": "http://localhost:3000",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
